remove: custom oauth2 endpoint
